--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,17 @@
 html {
   font-family: sans-serif;
-  background:#ffc600;
+  background: #ffc600;
 }
 
 .inbox {
-  max-width:400px;
-  margin:50px auto;
-  background:white;
-  border-radius:5px;
-  box-shadow:10px 10px 0 rgba(0,0,0,0.1);
+  max-width: 400px;
+  margin: 50px auto;
+  background: white;
+  border-radius: 5px;
+  box-shadow: 10px 10px 0 rgba(0,0,0,0.1);
 }
 
 .item {
   display:flex;
+  align-items: center;
 }
