--- a/styles.css
+++ b/styles.css
@@ -33,3 +33,8 @@ p {
   font-weight: 200;
   border-left: 1px solid #D1E2FF;
 }
+
+input:checked + p {
+  background:#F9F9F9;
+  text-decoration: line-through;
+}
