--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,7 @@ input[type="checkbox"] {
 p {
   margin: 0;
   padding: 20px;
+  transition: background 0.2s;
   font-family: 'helvetica neue';
   font-size: 20px;
   font-weight: 200;
